--- a/public/manifest.json
+++ b/public/manifest.json
@@ -38,28 +38,40 @@
       "purpose": "maskable"
     }
   ],
-  "shortcuts": [
-    {
-      "name": "Analyze Credit Report",
-      "short_name": "Analyze",
-      "description": "Go to the credit analysis page",
-      "url": "/credit",
-      "icons": [{ "src": "https://placehold.co/96x96.png", "sizes": "96x96" }]
-    },
-    {
-      "name": "Verify a PDF",
-      "short_name": "Verify",
-      "description": "Go to the PDF verification page",
-      "url": "/verify",
-      "icons": [{ "src": "https://placehold.co/96x96.png", "sizes": "96x96" }]
-    }
-  ],
   "file_handlers": [
     {
       "action": "/credit",
       "accept": {
-        "application/pdf": [".pdf"]
+        "application/pdf": [
+          ".pdf"
+        ]
       }
+    }
+  ],
+  "shortcuts": [
+    {
+      "name": "Analyze Credit Report",
+      "short_name": "Analyze",
+      "description": "Upload and analyze a new CIBIL report",
+      "url": "/credit",
+      "icons": [
+        {
+          "src": "https://placehold.co/96x96.png",
+          "sizes": "96x96"
+        }
+      ]
+    },
+    {
+      "name": "Verify Document",
+      "short_name": "Verify",
+      "description": "Run a forensic analysis on a PDF",
+      "url": "/verify",
+      "icons": [
+        {
+          "src": "https://placehold.co/96x96.png",
+          "sizes": "96x96"
+        }
+      ]
     }
   ],
   "share_target": {
@@ -72,8 +84,11 @@
       "url": "url",
       "files": [
         {
-          "name": "pdfFile",
-          "accept": ["application/pdf"]
+          "name": "pdf",
+          "accept": [
+            "application/pdf",
+            ".pdf"
+          ]
         }
       ]
     }
@@ -94,12 +109,37 @@
   },
   "widgets": [
     {
-      "name": "CreditWise Quick Actions",
-      "description": "Quickly access CreditWise AI features.",
-      "tag": "creditwise-widget",
-      "template": "creditwise-widget-template",
-      "ms_ac_template": "creditwise-widget-template",
-      "data": "{}"
+      "name": "CreditWise AI Tools",
+      "description": "Quickly access analysis tools",
+      "tag": "credit-tools",
+      "icons": [
+        {
+          "src": "https://placehold.co/192x192.png",
+          "sizes": "192x192",
+          "type": "image/png"
+        }
+      ],
+      "screenshots": [
+        {
+          "src": "https://placehold.co/600x400.png",
+          "sizes": "600x400",
+          "type": "image/png",
+          "label": "CreditWise AI Tools Widget"
+        }
+      ],
+      "template": "tool_list_template",
+      "data": {
+        "items": [
+          {
+            "label": "Analyze Report",
+            "url": "/credit"
+          },
+          {
+            "label": "Verify PDF",
+            "url": "/verify"
+          }
+        ]
+      }
     }
   ]
 }
