--- a/home/runner/work/mkshanmuka/mkshanmuka/package.json
+++ b/home/runner/work/mkshanmuka/mkshanmuka/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "preinstall": "npx npm-force-resolutions",
+    "preinstall": "npm config set legacy-peer-deps true",
     "dev": "next dev --port 9002 --hostname 0.0.0.0",
     "build": "next build",
     "start": "next start -p $PORT",
@@ -15,7 +15,6 @@
     "@genkit-ai/firebase": "1.16.1",
     "@genkit-ai/googleai": "1.16.1",
     "@opentelemetry/exporter-jaeger": "^1.25.1",
-    "@opentelemetry/winston-transport": "0.37.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
