--- a/home/runner/work/mkshanmuka/mkshanmuka/package.json
+++ b/home/runner/work/mkshanmuka/mkshanmuka/package.json
@@ -61,6 +61,6 @@
     "node": ">=18.0.0"
   },
   "overrides": {
-    "@opentelemetry/winston-transport": "npm:@opentelemetry/instrumentation@^0.38.0"
+    "@opentelemetry/instrumentation-winston": "0.36.0"
   }
 }
