--- a/home/runner/work/mkshanmuka/mkshanmuka/package.json
+++ b/home/runner/work/mkshanmuka/mkshanmuka/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "@genkit-ai/firebase": "1.16.1",
     "@genkit-ai/googleai": "1.16.1",
-    "@opentelemetry/exporter-jaeger": "^1.25.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -60,7 +59,5 @@
   "engines": {
     "node": ">=18.0.0"
   },
-  "overrides": {
-    "@opentelemetry/instrumentation-winston": "0.36.0"
-  }
+  "overrides": {}
 }
