--- a/home/runner/work/mkshanmuka/mkshanmuka/package.json
+++ b/home/runner/work/mkshanmuka/mkshanmuka/package.json
@@ -31,10 +31,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
-    "firebase": "^12.1.0",
+    "firebase": "12.1.0",
     "firebase-admin": "^12.2.0",
     "genkit": "1.16.1",
-    "lucide-react": "^0.408.0",
+    "lucide-react": "0.408.0",
     "next": "14.2.5",
     "pdfjs-dist": "4.4.168",
     "postcss": "^8.4.39",
@@ -42,11 +42,11 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "recharts": "^2.12.7",
-    "tailwind-merge": "^2.4.0",
+    "tailwind-merge": "2.4.0",
     "tailwindcss": "^3.4.4",
     "tailwindcss-animate": "^1.0.7",
     "wav": "^1.0.2",
-    "zod": "^3.23.8"
+    "zod": "^3.2.3.8"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
