--- a/home/runner/work/mkshanmuka/mkshanmuka/home/runner/work/mkshanmuka/mkshanmuka/package.json
+++ b/home/runner/work/mkshanmuka/mkshanmuka/home/runner/work/mkshanmuka/mkshanmuka/package.json
@@ -31,7 +31,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
-    "firebase": "^12.1.0",
+    "firebase": "12.1.0",
     "firebase-admin": "^12.2.0",
     "genkit": "1.16.1",
     "lucide-react": "^0.408.0",
