--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@genkit-ai/firebase": "1.16.1",
     "@genkit-ai/googleai": "1.16.1",
     "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -31,7 +32,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
-    "firebase": "12.1.0",
+    "firebase": "10.12.3",
     "firebase-admin": "^12.2.0",
     "genkit": "1.16.1",
     "lucide-react": "^0.408.0",
