--- a/home/runner/work/mkshanmuka/mkshanmuka/package.json
+++ b/home/runner/work/mkshanmuka/mkshanmuka/package.json
@@ -12,9 +12,10 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/firebase": "1.16.1",
-    "@genkit-ai/googleai": "1.16.1",
+    "@genkit-ai/firebase": "1.16.0",
+    "@genkit-ai/googleai": "1.16.0",
     "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -31,10 +32,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
-    "firebase": "12.1.0",
+    "firebase": "10.12.3",
     "firebase-admin": "^12.2.0",
-    "genkit": "1.16.1",
-    "lucide-react": "0.408.0",
+    "genkit": "1.16.0",
+    "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "pdfjs-dist": "4.4.168",
     "postcss": "^8.4.39",
@@ -42,7 +43,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "recharts": "^2.12.7",
-    "tailwind-merge": "2.4.0",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.4",
     "tailwindcss-animate": "^1.0.7",
     "wav": "^1.0.2",
@@ -53,7 +54,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/recharts": "^1.8.29",
-    "genkit-cli": "1.16.1",
+    "genkit-cli": "1.16.0",
     "typescript": "^5.5.3"
   },
   "engines": {
