--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -12,8 +11,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/firebase": "1.0.0",
-    "@genkit-ai/googleai": "1.0.0",
+    "@genkit-ai/firebase": "^0.6.2",
+    "@genkit-ai/googleai": "^0.6.2",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -34,7 +33,7 @@
     "dotenv": "^16.4.5",
     "firebase": "10.12.3",
     "firebase-admin": "^12.2.0",
-    "genkit": "1.0.0",
+    "genkit": "^0.6.2",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "pdfjs-dist": "4.4.168",
@@ -54,11 +53,11 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/recharts": "^1.8.29",
-    "genkit-cli": "1.0.0",
+    "genkit-cli": "^0.6.2",
     "typescript": "^5.5.3"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=20.0.0"
   },
   "overrides": {}
 }
