--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/firebase": "^0.6.2",
-    "@genkit-ai/googleai": "^0.6.2",
+    "@genkit-ai/googleai": "0.6.2",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -33,7 +32,7 @@
     "dotenv": "^16.4.5",
     "firebase": "10.12.3",
     "firebase-admin": "^12.2.0",
-    "genkit": "^0.6.2",
+    "genkit": "0.6.2",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "pdfjs-dist": "4.4.168",
@@ -53,7 +52,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/recharts": "^1.8.29",
-    "genkit-cli": "^0.6.2",
+    "genkit-cli": "0.6.2",
     "typescript": "^5.5.3"
   },
   "engines": {
