--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@genkit-ai/googleai": "1.15.5",
     "@radix-ui/react-accordion": "1.2.0",
     "@radix-ui/react-alert-dialog": "1.1.1",
     "@radix-ui/react-avatar": "1.1.0",
@@ -30,6 +31,7 @@
     "clsx": "2.1.1",
     "dotenv": "16.4.5",
     "firebase": "10.12.3",
+    "genkit": "1.15.5",
     "lucide-react": "0.408.0",
     "next": "14.2.5",
     "pdfjs-dist": "4.4.168",
