--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "pdfjs-dist": "4.4.168",
     "postcss": "8.4.39",
     "react": "18.3.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "18.3.1",
     "react-hook-form": "7.52.1",
     "recharts": "2.12.7",
