--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@genkit-ai/firebase": "1.15.5",
     "@genkit-ai/googleai": "1.15.5",
     "@radix-ui/react-accordion": "1.2.0",
     "@radix-ui/react-alert-dialog": "1.1.1",
@@ -30,6 +31,7 @@
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "dotenv": "16.4.5",
+    "embla-carousel-react": "8.1.6",
     "firebase": "10.12.3",
     "genkit": "1.15.5",
     "lucide-react": "0.408.0",
