--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react": "18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "18.3.1",
+    "react-firebase-hooks": "5.1.1",
     "react-hook-form": "7.52.1",
     "recharts": "2.12.7",
     "tailwind-merge": "2.4.0",
