--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@genkit-ai/firebase": "1.15.5",
     "@genkit-ai/googleai": "1.15.5",
+    "@genkit-ai/vertexai": "1.15.5",
     "@radix-ui/react-accordion": "1.2.0",
     "@radix-ui/react-alert-dialog": "1.1.1",
     "@radix-ui/react-avatar": "1.1.0",
