--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@genkit-ai/dotprompt": "latest",
     "@genkit-ai/firebase": "1.15.5",
     "@genkit-ai/googleai": "1.15.5",
     "@radix-ui/react-accordion": "1.2.0",
