--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "tailwind-merge": "2.4.0",
     "tailwindcss": "3.4.4",
     "tailwindcss-animate": "1.0.7",
-    "wav": "1.0.2",
+    "wav": "^1.0.2",
     "zod": "3.23.8"
   },
   "devDependencies": {
