--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -11,8 +10,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/dotprompt": "latest",
-    "@genkit-ai/firebase": "1.15.5",
+    "@genkit-ai/firebase": "^1.16.1",
     "@genkit-ai/googleai": "1.15.5",
     "@radix-ui/react-accordion": "1.2.0",
     "@radix-ui/react-alert-dialog": "1.1.1",
@@ -45,8 +43,7 @@
     "embla-carousel-react": "8.1.6",
     "firebase": "10.12.3",
     "firebase-admin": "^12.2.0",
-    "genkit": "1.15.5",
-    "handlebars": "4.7.8",
+    "genkit": "^1.16.1",
     "lucide-react": "0.408.0",
     "next": "14.2.5",
     "pdfjs-dist": "4.4.168",
