--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/firebase": "^1.16.1",
+    "@genkit-ai/firebase": "1.15.5",
     "@genkit-ai/googleai": "1.15.5",
     "@radix-ui/react-accordion": "1.2.0",
     "@radix-ui/react-alert-dialog": "1.1.1",
@@ -43,7 +43,7 @@
     "embla-carousel-react": "8.1.6",
     "firebase": "10.12.3",
     "firebase-admin": "^12.2.0",
-    "genkit": "^1.16.1",
+    "genkit": "1.15.5",
     "lucide-react": "0.408.0",
     "next": "14.2.5",
     "pdfjs-dist": "4.4.168",
