--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
+    "@opentelemetry/exporter-jaeger": "^2.0.1",
+    "@opentelemetry/winston-transport": "^0.14.1",
     "@types/node": "20.14.10",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
