--- a/.env
+++ b/.env
@@ -1,6 +1,1 @@
-
-# This is a placeholder for your actual Firebase API key.
-# IMPORTANT: Replace "your-api-key-here" with the key from your Firebase project settings.
-# You can find it in the Firebase console: Project Settings > General > Your apps > Web app > SDK setup and configuration.
-NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyAeIyY3IH-zAkV8FSmmKyR1b32pCa46fQg"
-GEMINI_API_KEY="AIzaSyCrBPP288-XP7WiC2FH8k6ldEoIY4zU9zw"
+GENKIT_GEMINI_API_KEY="YOUR_GEMINI_API_KEY_HERE"
