--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-GENKIT_GEMINI_API_KEY="AIzaSyCrBPP288-XP7WiC2FH8k6ldEoIY4zU9zw"
-GEMINI_API_KEY=AIzaSyCrBPP288-XP7WiC2FH8k6ldEoIY4zU9zw
+GEMINI_API_KEY="YOUR_GEMINI_API_KEY_HERE"
