--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
-GEMINI_API_KEY="YOUR_GEMINI_API_KEY_HERE"
+GEMINI_API_KEY=AIzaSyCGud1j2LbhrMSFHSiHPCEGWJiKCKRXu9A
 NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyAeIyY3IH-zAkV8FSmmKyR1b32pCa46fQg"
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="creditwise-ai-nd7s0.firebaseapp.com"
 NEXT_PUBLIC_FIREBASE_PROJECT_ID="creditwise-ai-nd7s0"
