--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "embla-carousel-react": "8.1.6",
     "firebase": "10.12.3",
     "firebase-admin": "^12.2.0",
-    "genkit": "1.15.5",
+    "genkit": "^1.15.5",
     "lucide-react": "0.408.0",
     "next": "14.2.5",
     "pdfjs-dist": "4.4.168",
