--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "firebase": "10.12.3",
     "firebase-admin": "^12.2.0",
     "genkit": "^1.15.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "lucide-react": "0.408.0",
     "next": "14.2.5",
     "pdfjs-dist": "4.4.168",
