--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
-GEMINI_API_KEY="YOUR_API_KEY_HERE"
+NEXT_PUBLIC_FIREBASE_API_KEY="your-valid-firebase-api-key"
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="your-project.firebaseapp.com"
+NEXT_PUBLIC_FIREBASE_PROJECT_ID="your-project-id"
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="your-project.appspot.com"
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="your-sender-id"
+NEXT_PUBLIC_FIREBASE_APP_ID="your-app-id"
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="your-measurement-id"
+FIREBASE_ADMIN_SERVICE_ACCOUNT=""
+GEMINI_API_KEY=""
