--- a/package.json
+++ b/package.json
@@ -42,16 +42,16 @@
     "clsx": "2.1.1",
     "dotenv": "16.4.5",
     "embla-carousel-react": "8.1.6",
-    "firebase": "10.12.3",
+    "firebase": "^12.1.0",
     "firebase-admin": "^12.2.0",
     "genkit": "^1.15.5",
     "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "0.408.0",
-    "next": "14.2.5",
+    "next": "^14.2.32",
     "pdfjs-dist": "4.4.168",
     "postcss": "8.4.39",
-    "react": "18.3.1",
+    "react": "^18.2.0",
     "react-day-picker": "8.10.1",
     "react-dom": "18.3.1",
     "react-firebase-hooks": "5.1.1",
