--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="creditwise-ai-nd7s0.firebasestorage.app"
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="492248595221"
 NEXT_PUBLIC_FIREBASE_APP_ID="1:492248595221:web:3fe409487b8848d4a6071c"
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="G-8LLWXP1RJP"
+NEXT_PUBLIC_FIREBASE_DATABASE_URL="https://creditwise-ai-nd7s0.firebaseio.com"
 
 FIREBASE_PROJECT_ID="creditwise-ai-nd7s0"
 FIREBASE_CLIENT_EMAIL="firebase-adminsdk-fbsvc@creditwise-ai-nd7s0.iam.gserviceaccount.com"
