--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,23 @@
+
 {
   "name": "CreditWise AI",
   "short_name": "CreditWise",
   "description": "Advanced AI Credit Score Analyzer & ML Model Trainer by CreditWise AI",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#F0F2F5",
-  "theme_color": "#3F51B5",
   "icons": [
     {
-      "src": "icon-192x192.png",
+      "src": "/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512x512.png",
+      "src": "/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
-  ]
+  ],
+  "theme_color": "#3F51B5",
+  "background_color": "#F0F2F5",
+  "start_url": "/",
+  "display": "standalone",
+  "orientation": "portrait"
 }
