--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "autoprefixer": "10.4.19",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
+    "date-fns": "^3.6.0",
     "dotenv": "16.4.5",
     "embla-carousel-react": "8.1.6",
     "firebase": "^12.1.0",
